# rlox

./: Cargo.toml  PLAN.md  README.md  REVIEW_AND_FIX_REPORT.md
docs/specs/: 2026-04-20-lox-rust-design.md
examples/: class.lox  closure.lox  fib.lox  hello.lox
rlox-tree/: Cargo.toml
rlox-tree/src/: ast.rs  environment.rs  error.rs  interpreter.rs  lib.rs  main.rs  parser.rs  resolver.rs  scanner.rs  token.rs  value.rs
rlox-tree/tests/: interpret_tests.rs
rlox-vm/: Cargo.toml
rlox-vm/src/: chunk.rs  compiler.rs  debug.rs  lib.rs  main.rs  scanner.rs  value.rs  vm.rs
rlox-vm/tests/: vm_tests.rs
test-suite/: Cargo.toml
test-suite/cases/: UPSTREAM.md
test-suite/src/: main.rs
